# kube-vision

./: .gitignore  MANIFEST.in  README.md  noxfile.py  requirements.txt  setup.cfg
doc/: ChangeLog.md
etc/: kubevision-sample.conf
i18n/: zh_CN.po
install/: CentOS-8-ali.repo  Dockerfile  build.py
kubevision/: hooks.py  views.py
kubevision/cmd/: ctl.py
kubevision/common/: conf.py  constants.py  context.py  i18n.py  utils.py
kubevision/db/: api.py
kubevision/k8s/: api.py  objects.py
kubevision/static/: dashboard.js
kubevision/static/kubevision/: api.js  lib.js
kubevision/templates/: dashboard.html
kubevision/templates/extensions/: daemonset.html  deployment.html  namespace.html  overview.html  pod.html
