[metadata]
name = kubevision
summary = Kubenets Dashboard
author = fjboy
author_email = 2535463841@qq.com
home_page = https://github.com/fjboy/vuetify-stack-board

[global]
setup-hooks =
    kubevision.hooks.setup_hook

[files]
packages =
    kubevision
    kubevision.templates
    kubevision.static

data_files =
    /etc/kubevision = etc/kubevision-sample.conf

[entry_points]
console_scripts =
    kubevision = kubevision.cmd.ctl:main
